   see the git log for a detailed list of changes:
   http://github.com/djmitche/buildbot/commits/master

* NEXT RELEASE

** Required Jinja Version

The Buildmaster now requires Jinja-2.1 or higher.

** New libvirt-based Latent Buildslave Support

This extends the support already included for EC2 buildslaves to include any
virtualization platform supported by libvirt.

** New Steps

*** VC++ 9, VS2008, VCExpress9 - part of the vstudio suite of steps

** Deprecations / Removals

*** Removed sendchange's --revision_number argument (use --revision)

* Release 0.8.1 (June 16, 2010)

** Slave Split into separate component

Installing 'buildbot' will no longer allow you to run a slave - for that,
you'll now need the 'buildslave' component, which is available by easy_install.
This is merely a packaging change - the buildslave and buildbot components are
completely inter-compatible, just as they always have been.

** Features

*** Add googlecode_atom.py to contrib (ticket #842)

*** Implement clean master shutdown, available through WebStatus

** Fixes

*** Pass local environment variables along with getProcessOutput. Required for
    ssh agent authentication.

*** IRC doc fixes (ticket #852)

*** Remove builder count from one_line_per_build (ticket #854)

*** Set the 'revision' property more often (ticket #101)

*** Change property priority ordering (ticket #809)

*** Fixes to MaildirSource for CVS

*** Use shutil.rmtree on POSIX systems

*** Fix NameError in MailNotifier (ticket #758)

*** Reduce verbosity of patches in twistd.log (ticket #803)

*** Documentation updates to reflect UI customization via
    templates (ticket #866)

** Deprecations

*** Arch, Bazaar, and Monotone to be removed in 0.8.2

This decision isn't final, but support for these VC's will be removed in
version 0.8.2 unless a maintainers steps forward to document, test, and update
them.

*** Support for starting buildmaster from Makefiles to be removed in 0.8.2
